# claude-agent-sdk-demo

./: .dockerignore  .gitignore  Dockerfile  README.md  agent_auth.py  demo.py  pyproject.toml
docs/: deployment-railway.md
server/: main.py  sdk_tools.py
web/: .dockerignore  Dockerfile  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/chat/: chat-bubble.tsx  chat-composer.tsx  chat-empty.tsx  chat-header.tsx  slash-menu.tsx  tool-call-card.tsx
web/src/lib/: slash-commands.ts  sse-client.ts  use-chat.ts
