[project]
name = "agent-sdk-demo"
version = "0.1.0"
description = "Minimal Claude Agent SDK demo verifying local Claude Code CLI spawn + auth."
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "anyio>=4.0",
    "fastapi>=0.115",
    "sse-starlette>=2.1",
    "uvicorn[standard]>=0.30",
]
